[package]
name = "webgl"
version = "0.1.0"
authors = ["The wasm-bindgen Developers"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.44"
wasm-bindgen = "0.2.67"
wasm-bindgen-futures = "0.4.17"
once_cell="1.4.1"

[dependencies.web-sys]
version = "0.3.44"
features = [
  'Document',
  'Element', 
  'HtmlCanvasElement',
  'Response',
  'WebGlActiveInfo',
  'WebGlBuffer',
  'WebGlFramebuffer',
  'WebGlTexture',
  'WebGlRenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebGlUniformLocation',
  'Window',
]