[package]
name = "webgl"
version = "0.1.0"
authors = ["The wasm-bindgen Developers"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.44"
wasm-bindgen = "0.2.67"
wasm-bindgen-futures = "0.4.17"
once_cell="1.4.1"
uuid = { version = "0.8.1", features = ["wasm-bindgen", "v4"] }
derive_more = "0.99.9"

[dependencies.web-sys]
version = "0.3.44"
features = [
  'CssStyleDeclaration',
  'Document',    
  'Element',
  'HtmlCanvasElement', 
  'HtmlElement',
  'Response',
  'WebGlActiveInfo',
  'WebGlBuffer',
  'WebGlFramebuffer',
  'WebGlTexture',   
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebGlUniformLocation',
  'WebGlVertexArrayObject',
  'Window',
]